--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_de.properties
@@ -5,8 +5,8 @@ class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.A
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = Keine Kopfzeile mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = Kein Abfrageparameter mit dem Namen '{0}' gefunden.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Fehlende Authentifizierung.
-class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Keine BasicAuth Authentifizierung.
-class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA__USER = Falsche Authentifizierung für Nutzer "{0}".
+class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Ungültige Authentifizierungsdaten für das Schema basic.
+class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA = Ungültiger Benutzer oder ungültiges Passwort.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_ILLEGAL_TOKEN_VALIDATION_RESPONSE__MSG = Ungültige Serverantwort bei der Validierung des Tokens: {0}
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_NO_TOKEN = Token kann nicht abgerufen werden.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_DECLINED__STATUS_CODE__CODE__DESCRIPTION = Token abgelehnt: {0} {1}: {2}.
