--- a/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.service.openapi.server/src/main/java/META-INF/messages_en.properties
@@ -5,8 +5,8 @@ class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.A
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_HEADER__PARAMETER = No header with name ''{0}'' found.
 class.com.top_logic.service.openapi.server.authentication.apikey.I18NConstants.AUTH_FAILED_NO_QUERY_PARAM__PARAMETER = No query parameter with name ''{0}'' found.
 class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_MISSING_AUTHENTICATION_DATA = Missing authentication data.
-class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Not a BasicAuth authentication.
-class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA__USER = Wrong credentials for user "{0}".
+class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_NO_BASIC_AUTH = Invalid authentication data for scheme basic.
+class.com.top_logic.service.openapi.server.authentication.http.basic.I18NConstants.AUTH_FAILED_WRONG_AUTHENTICATION_DATA = Invalid user or password.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_ILLEGAL_TOKEN_VALIDATION_RESPONSE__MSG = Invalid server response when validating token: {0}
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_NO_TOKEN = Unable to get token.
 class.com.top_logic.service.openapi.server.authentication.impl.I18NConstants.AUTH_FAILED_TOKEN_DECLINED__STATUS_CODE__CODE__DESCRIPTION = Token declined: {0} {1}: {2}.
