--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -5651,8 +5651,15 @@ com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW = Row
 com.top_logic.layout.table.dnd.TableDropTarget.DropType.ROW.tooltip = A drop occurs to a row itself, without positioning relative to the target row.
 com.top_logic.layout.table.export.AbstractTableExportHandler = Table export handler
 com.top_logic.layout.table.export.AbstractTableExportHandler.tooltip = Base class for <i>table data</i> exports.
+com.top_logic.layout.table.export.ConfiguredDownloadNameProvider = Configured download name provider
+com.top_logic.layout.table.export.ConfiguredDownloadNameProvider.tooltip = <i>Configured instance</i> <i>Download name provider</i>.
 com.top_logic.layout.table.export.ExcelExportHandler = Excel export handler
+com.top_logic.layout.table.export.ExcelExportHandler.Config.dynamic-download-name = Dynamic download name
 com.top_logic.layout.table.export.ExcelExportHandler.tooltip = Handler for generating Excel reports from <i>table data</i>.
+com.top_logic.layout.table.export.ModelDownloadName = Model download name
+com.top_logic.layout.table.export.ModelDownloadName.Config.model = Model
+com.top_logic.layout.table.export.ModelDownloadName.Config.model.tooltip = The <i>component channel</i> to get the value to render from.
+com.top_logic.layout.table.export.ModelDownloadName.tooltip = <i>Download name provider</i> generating filenames based on the model of a component.
 com.top_logic.layout.table.export.StreamingExcelExportHandler = Streaming Excel export handler
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameKey = Download name
 com.top_logic.layout.table.export.StreamingExcelExportHandler.Config.exportNameKey.tooltip = File name of the created download.
